--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.thamali">
+    package="com.example.quizapp">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewsFeeds">
+        <activity android:name=".UpdateNews"></activity>
+        <activity android:name=".NewsFeeds"></activity>
+        <activity android:name=".NewsAdd" />
+        <activity android:name=".TeacherNews">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
